fix javadoc fixed some code smells removed all java 11 code